修改了基本配置

--- a/hrm/pom.xml
+++ b/hrm/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/>
         <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.qiujie</groupId>
+    <groupId>com.glb</groupId>
     <artifactId>hrm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>hrm</name>
-    <description>人力资源管理系统</description>
+    <description>医院人力资源管理系统</description>
     <properties>
         <java.version>17</java.version>
         <java.version>17</java.version>
